# RAG-KIT

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
rag_kit/: __init__.py  pipeline.py
rag_kit/chunking/: __init__.py  base.py  fixed_size.py  recursive.py
rag_kit/embedding/: __init__.py  base.py  openai_embedder.py  sentence_transformers_embedder.py
rag_kit/loaders/: __init__.py  base.py  markdown_loader.py  pdf_loader.py  registry.py  text_loader.py
rag_kit/retrieval/: __init__.py  base.py  bm25_retriever.py  dense.py  hybrid.py  reranker.py
rag_kit/vectorstore/: __init__.py  base.py  chroma_store.py  faiss_store.py
tests/: conftest.py  test_chunking.py  test_pipeline_e2e.py  test_retrieval.py
tests/fixtures/: doc1.txt  doc2.md  doc3.txt
